OO-3112: Set default decision method

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -27,7 +27,7 @@ edit.taxonomyLevel=Fachbereich bearbeiten
 educational.context.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 educational.context.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
 error.integer.positive=Die Eingabe muss eine positive Zahl sein.final.visibility.manager=Manager
-final.visibility=Sichtbarkeit von finalen Fragen.
+final.visibility=Sichtbarkeit von finalen Fragen
 final.visibility.manager=Verwalter
 final.visibility.manager.teacher=Verwalter, Dozent
 item.license.deleted=Lizenz wurde erfolgreich gel\u00F6scht
@@ -39,10 +39,10 @@ level.key=ID
 level.level=Stufe
 level.translation=\u00DCbersetzung
 license.id=ID
-license.key=Lizenznumber.of.ratings.for.final=Number of ratings per question
+license.key=Lizenz
 lower.limit=Untergrenze f\u00FCr positive Beurteilung
 lower.limit.provider.name=Untergrenze
-number.of.ratings.for.final=Anzahl Beurteilungen pro Frage
+number.of.ratings=Anzahl Beurteilungen pro Frage
 pools.enabled=Pools
 reset.status=Alle Fragen in den Status "draft" zur\u00FCcksetzen.
 review.process.confirm.enable.button=Einschalten
