OO-3119: add a tab in the selection of question item for the QTI editors

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -129,6 +129,7 @@ menu.share=Freigaben
 metadatas=Metadaten
 metadata.show=Metadaten anzeigen
 metadata.hide=Metadaten ausblenden
+my.competences=Meine F\u00E4cher
 my.list=Meine Listen
 my.share=Meine Shares
 new.item=Frage erstellen
