--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -129,6 +129,7 @@ menu.share=Public shares
 metadatas=Metadata
 metadata.show=Show metadata
 metadata.hide=Hide metadata
+my.competences=My subjects
 my.list=My lists
 my.share=My shares
 new.item=Create question
