OO-3231: implements a dedicated indexer for the templates of the document pool

--- a/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_de.properties
@@ -47,6 +47,7 @@ PFCourseNode=Drop Box
 ReturnboxController=R\u00FCckgabeordner
 SolutionController=Musterl\u00F6sungen
 TaxonomyLibrary=Taxonomy Bibliothek
+Templates=Vorlage
 User=Benutzer
 WikiPage=Wiki
 ajax.show.on=[Ajax-Beta-Mode]
