--- a/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_en.properties
@@ -47,6 +47,7 @@ PFCourseNode=Drop Box
 ReturnboxController=Return box
 SolutionController=Sample solutions
 TaxonomyLibrary=Taxonomy library
+Templates=Templates
 User=User
 WikiPage=Wiki
 ajax.show.on=[Ajax-Beta-Mode]
