--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_de.properties
@@ -103,6 +103,7 @@ LibrarySite=Bibliothek
 Taxonomy=Taxonomy
 DocumentPool=Dokumentenpool
 TaxonomyLevel=Taxonomy Level
+Templates=Vorlage
 type.file=Datei
 type.file.html=HTML-Datei
 type.file.word=Word-Datei
