--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_en.properties
@@ -62,6 +62,7 @@ switch.advanced.search=Advanced search
 switch.simple.search=Simple search
 Taxonomy=Taxonomy
 TaxonomyLevel=Taxonomy Level
+Templates=Templates
 too.many.results=Too many results found. Only the first {0} will be displayed.
 toolfolder=Folder
 toolforum=Forums
