OO-3117: Rearange menu items in the question item gui

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -187,12 +187,12 @@ rights.owners=Urheber
 root.taxonomyLevel=Fachbereiche
 select.group=Freigeben
 select.item=$\:details
-select.pool=Zum Pool freigeben
+select.pool=In Pool freigeben
 share.editable=Editieren
-share.group=Zur Gruppe freigeben
+share.group=In Gruppe freigeben
 share.item=Freigeben
 share.options=Wollen Sie anderen Personen erlauben diese Frage(n) zu bearbeiten?
-share.pool=Zu Pool freigeben
+share.pool=In Pool freigeben
 shared=Freigegeben
 sharing.shares=Gruppen
 sharing.shares.empty.table=Diese Frage ist mit keiner Gruppe freigegeben.
