--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -147,7 +147,7 @@ process.start.review.taxonomy.level=Fachbereiche
 process.start.review.title=$\:process.start.review
 process.confirm.endOfLife=Die Frage kann nach dem Setzen des "$\:lifecycle.status.endOfLife" nicht mehr verwendet werden .Wollen Sie die Frage "{0}" wirklich auf End of life setzen?
 process.final=Final
-process.final.set=Der Status der Frage wurde auf "$\:lifecycle.status.finalStatus" ge\u00E4ndert.
+process.final.set=Der Status der Frage wurde auf "$\:lifecycle.status.finalVersion" ge\u00E4ndert.
 process.endOfLife=End of life
 process.endOfLife.set=Das end of life wurde gesetzt.
 process.not.reviewable=Keine Beurteilung
