no-jira: Wording

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -26,7 +26,7 @@ edit.info.page=Infoseite bearbeiten
 edit.taxonomyLevel=Fachbereich bearbeiten
 educational.context.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 educational.context.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet
-error.integer.positive=Die Eingabe muss eine positive Zahl sein.final.visibility.manager=Manager
+error.integer.positive=Die Eingabe muss eine positive Zahl sein.
 final.visibility=Sichtbarkeit von finalen Fragen
 final.visibility.manager=Verwalter
 final.visibility.manager.teacher=Verwalter, Dozent
