OO-3120: add panel to find some informations from the question pool

--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_de.properties
@@ -17,6 +17,8 @@ change.elements=Elemente \u00E4ndern
 convert=Konvertieren
 convert.alien=Konvertieren
 convert.to=Umwandeln in\:
+copy.qpool.question=Kopie erstellen und bearbeiten
+copy.at=Kopiert am
 correct.answers=Korrekt
 cut.value=Notwendige Punktzahl f\u00FCr "Bestanden"
 delete=L\u00F6schen
@@ -134,6 +136,7 @@ form.match=Match
 form.metadata=Metadaten
 form.metadata.description=Beschreibung
 form.metadata.title=Titel
+form.pool=\u00DCbertrag
 form.score=Punkte
 form.score.answer.correct=Korrekt
 form.score.answer.points=Punkte
@@ -156,6 +159,8 @@ form.testPart.navigationMode.linear=Linear
 form.testPart.navigationMode.nonlinear=Nicht linear
 form.unkown=Unbekannt
 form.upload=Datei hochladen
+general.identifier=$org.olat.modules.qpool.ui\:general.identifier
+general.master.identifier=$org.olat.modules.qpool.ui\:general.master.identifier
 hotspot.layout=Hotspot Farbe
 hotspot.layout.green=Gr\u00FCn
 hotspot.layout.inverted=Invertiert
@@ -175,6 +180,7 @@ item.session.control.attempts=Versuch
 item.session.control.attempts.hint=Diese Einschr\u00E4nkung der L\u00F6sungsversuche bezieht sich auf einen Test-Part und nicht den gesamten Test. Die Versuche f\u00FCr den gesamten Test k\u00F6nnen unter "Optionen" eingeschr\u00E4nkt werden.
 item.session.control.show.solution=L\u00F6sung anzeigen
 item.session.control.show.solution.hint=Beim R\u00FCckblick werden auch L\u00F6sungen angezeigt.
+lifecycle.version=$org.olat.modules.qpool.ui\:lifecycle.version
 math.operator.bigger=>
 math.operator.biggerEquals=>\=
 math.operator.equals=\=
@@ -211,6 +217,7 @@ new.testpart=Test-Part
 new.upload=Datei hochladen
 preview=Vorschau
 preview.solution=Vorschau L\u00F6sung
+rights.owners=$org.olat.modules.qpool.ui\:rights.owners
 time.limit.max=Zeitbeschr\u00E4nkung
 title.add=$org.olat.ims.qti.editor\:title.add
 tools.change.copy=$org.olat.ims.qti.editor\:tools.change.copy
@@ -232,6 +239,7 @@ warning.atleastone=Bitte w\u00E4hlen Sie mindestens ein Element.
 warning.atleastonesection=Diese Sektion kann nicht gel\u00F6scht werden. Ein Test oder ein Test-Part muss mindestens eine Sektion enthalten.
 warning.conversion.list=Es wurde Inkompatibilit\u00E4ten gefunde\:
 warning.conversion.standard=Es gibt ein Risiko dass sie Daten verlieren obwohl kein Inkompatibilit\u00E4t entdeckt wurde.
+warning.copy.from.pool=Die Frage wurde von Fragenpool kopiert. Sie k\u00F6nnen den Original Frage unter Master ID finden.
 warning.custom.operator=Es wurde ein Hersteller Spezifisch Extension gefunden. Diese ist nicht von Editor unterst\u00FCtzt.
 warning.feedback.cutvalue=Feedback wird aktiviert sobald bei "Notwendige Punktzahl f\u00FCr 'Bestanden'" eine Punktzahl eingegeben wurde.
 warning.in.use=Die Ressource wird bereits f\u00FCr Auswertung verwendet. Die Bearbeitung ist begrenzt.
