--- a/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/_i18n/LocalStrings_en.properties
@@ -16,6 +16,8 @@ convert=Convert
 convert.alien=Convert
 correct.answers=Correct
 convert.to=Convert to:
+copy.qpool.question=make a copy and edit
+copy.at=Copied at
 cut.value=Cut value
 delete=Delete
 delete.item=$org.olat.ims.qti.editor\:delete.item
@@ -133,6 +135,7 @@ form.match=Match
 form.metadata=Metadata
 form.metadata.description=Description
 form.metadata.title=Title
+form.pool=Transfer
 form.score=Score
 form.score.answer.correct=Correct
 form.score.answer.points=Points
@@ -155,6 +158,8 @@ form.testPart.navigationMode.linear=Linear
 form.testPart.navigationMode.nonlinear=Non linear
 form.unkown=Unkown
 form.upload=File upload
+general.identifier=$org.olat.modules.qpool.ui\:general.identifier
+general.master.identifier=$org.olat.modules.qpool.ui\:general.master.identifier
 hotspot.layout=Layout
 hotspot.layout.standard=Standard blue
 hotspot.layout.inverted=Inverted
@@ -174,6 +179,7 @@ item.session.control.attempts=Attempts
 item.session.control.attempts.hint=This limitation of the attempts is only valid for the parts not for the whole test. The attempts for the whole test can be limited in "Options".
 item.session.control.show.solution=Show solution
 item.session.control.show.solution.hint=Solution is shown in review as well.
+lifecycle.version=$org.olat.modules.qpool.ui\:lifecycle.version
 math.operator.bigger=>
 math.operator.biggerEquals=>\=
 math.operator.equals=\=
@@ -211,6 +217,7 @@ new.testpart=Test part
 new.upload=Upload file
 preview=Preview
 preview.solution=Preview solution
+rights.owners=$org.olat.modules.qpool.ui\:rights.owners
 time.limit.max=Time limit
 title.add=$org.olat.ims.qti.editor\:title.add
 SINGLE=Single choice
@@ -231,6 +238,7 @@ warning.alien.assessment.test=This test cannot be processed with the OpenOLAT ed
 warning.alien.feedbacks=This question contains feedbacks which are not compatible with this editor. They will be lost after conversion.
 warning.atleastone=Please, choose at least one element.
 warning.atleastonesection=The section cannot be deleted. A test or a test part must contain at least one section.
+warning.copy.from.pool=The question was copied from the question bank. You can found the original question under the master id.
 warning.conversion.list=Some incompatibilities was found\:
 warning.conversion.standard=There is a risk that some data got lost after conversion but no flagrant incompatibilities was found.
 warning.custom.operator=This question contains creator specific extension which are currently not supported by OpenOLAT.
