OO-3113: Configuration of the pool manager rights

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -108,6 +108,7 @@ menu.admin.levels.alt=Stufe
 menu.admin.licenses=Lizenz
 menu.admin.licenses.alt=Lizenz
 menu.admin.pools=Pool-Verwaltung
+menu.admin.review.process=Beurteilungsprozess
 menu.admin.studyfields=Fachbereich
 menu.admin.studyfields.alt=Fachbereich
 menu.admin.types=Fragetyp
