--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -108,6 +108,7 @@ menu.admin.levels.alt=Level
 menu.admin.licenses=License
 menu.admin.licenses.alt=License
 menu.admin.pools=Pool administration
+menu.admin.review.process=Review Process
 menu.admin.studyfields=Subject
 menu.admin.studyfields.alt=Subject
 menu.admin.types=Type
