--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -3,6 +3,7 @@ add.taxonomyLevel=Create subject
 admin.configuration.title=Question bank
 admin.levels.intro=Create those levels that apply to your organisations educational level. Examples for levels in an academic context could be elementary school, middle school, high school, bachelor, master. Within a corporation context, levels could be the following\: without apprenticeship, with vocational training, administration, middle management, CO
 admin.licenses.intro=You can create more license types if the default license types are not sufficient. Please note that the default licenses cannot be deleted.
+admin.pool.manager.title=Rights pool manager
 admin.pools.intro=Create one or more question pools. A pool is an question bank that allows all users with author rights the exchange of question items (public access). You can also opt for a pool with only a select few authors, e.g. a departments' staff (private access).
 admin.review.process.decision.type=Decision method
 admin.review.process.title=Review process
@@ -42,6 +43,15 @@ license.id=ID
 license.key=License
 lower.limit=Lower limit for positive decision
 number.of.ratings=Number of ratings per question
+pool.manager.allowed=The pool manager is allowed to
+pool.manager.edit.matadata=see all questions and edit the metadata
+pool.manager.edit.status=change the status of a question
+pool.manager.educational.context=edit the settings "$:\segment.educational.context"
+pool.manager.licenses=edit the settings "$:\segment.licenses"
+pool.manager.item.types=edit the settings "$:\segment.item.types"
+pool.manager.pools=edit the settings "$:\segment.pools"
+pool.manager.review.process=edit the settings "$:\segment.review.process"
+pool.manager.taxonomy=edit the settings "$:\segment.taxonomy"
 pools.enabled=Pools
 reset.status=Reset all questions to state "draft".
 review.process.confirm.enable.button=Enable
