--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -3,6 +3,7 @@ add.taxonomyLevel=Fachbereich erstellen
 admin.configuration.title=Fragenpool
 admin.levels.intro=Erstellen Sie die verf\u00FCgbaren Stufen die f\u00FCr Ihr Ausbildungslevel Sinn machen. Beispiele f\u00FCr Stufen im schulischen Kontext sind\: Unterstufe, Oberstufe, Gymnasium, Bachelor, Master. In einem Unternehmenskontext k\u00F6nnten Stufen so aussehen\: ohne Berufsausbildung, mit Berufsausbildung, F\u00FChrungsfunktion, Administration, Kader, Management
 admin.licenses.intro=Erstellen Sie zus\u00E4tzliche Lizenztypen wenn die Standard Lizenztypen von OpenOLAT nicht gen\u00FCgen. Die Standard Lizenztypen k\u00F6nnen nicht gel\u00F6scht werden.
+admin.pool.manager.title=Rechte Poolverwalter
 admin.pools.intro=Erstellen Sie einen oder mehrere Fragenpools. Ein Fragenpool ist eine Fragendatenbank die allen Autoren des Systems f\u00FCr den Austausch von Fragen zur Verf\u00FCgung steht (\u00D6ffentlich). Optional l\u00E4sst sich ein Fragenpool auch auf einige wenige Autoren einschr\u00E4nken, z.B. die Mitarbeiter einer Abteilung (Nicht \u00F6ffentlich).
 admin.review.process.decision.type=Beurteilungsmethode
 admin.review.process.title=Beurteilungsprozess
@@ -43,6 +44,15 @@ license.key=Lizenz
 lower.limit=Untergrenze f\u00FCr positive Beurteilung
 lower.limit.provider.name=Untergrenze
 number.of.ratings=Anzahl Beurteilungen pro Frage
+pool.manager.allowed=Der Poolverwalter darf
+pool.manager.edit.matadata=alle Fragen sehen und die Metadaten bearbeiten
+pool.manager.edit.status=den Status einer Frage beliebig \u00E4ndern
+pool.manager.educational.context=die Einstellungen "$:\segment.educational.context" bearbeiten
+pool.manager.licenses=die Einstellungen "$:\segment.licenses" bearbeiten
+pool.manager.item.types=die Einstellungen "$:\segment.item.types" bearbeiten
+pool.manager.pools=die Einstellungen "$:\segment.pools" bearbeiten
+pool.manager.review.process=die Einstellungen "$:\segment.review.process" bearbeiten
+pool.manager.taxonomy=die Einstellungen "$:\segment.taxonomy" bearbeiten
 pools.enabled=Pools
 reset.status=Alle Fragen in den Status "draft" zur\u00FCcksetzen.
 review.process.confirm.enable.button=Einschalten
