OO-3233: add the course calendar url in the callout

--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_de.properties
@@ -67,7 +67,7 @@ cal.fri=Freitag
 cal.from=Von
 cal.goto.event=Gehe zu gew\u00E4hltem Termin
 cal.icalfeed.aggregated.info=Bitte benutzen Sie die folgende URL, um diesen Kalender (inklusive aller aggregierten Kalender) von anderen Anwendungen aus aufzurufen. Sie k\u00F6nnen die URL kopieren und in jede andere Kalenderanwendung einf\u00FCgen, welche das iCal-Format unterst\u00FCtzt.
-cal.icalfeed.aggregated.title=Aggregiertes iCal Feed-Link
+cal.icalfeed.aggregated.title=Pers\u00F6nliches aggregiertes iCal Feed-Link
 cal.icalfeed.aggregated.tooltip=$\:cal.icalfeed.aggregated.title
 cal.icalfeed.info=Bitte benutzen Sie die folgende URL, um diesen Kalender von anderen Anwendungen aus aufzurufen. Sie k\u00F6nnen die URL kopieren und in jede andere Kalenderanwendung einf\u00FCgen, welche das iCal-Format unterst\u00FCtzt.
 cal.icalfeed.regenerate.info=iCal Feed-Link wurde neu generiert.
