--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_en.properties
@@ -67,7 +67,7 @@ cal.fri=Friday
 cal.from=From
 cal.goto.event=Go to selected event
 cal.icalfeed.aggregated.info=Please use the following URL in order to call this calendar (including all aggregated calendars) from other applications. You can copy and paste the URL into any calendar application supporting the iCal format.
-cal.icalfeed.aggregated.title=Aggregated iCal Feed-Link
+cal.icalfeed.aggregated.title=Personal aggregated iCal Feed-Link
 cal.icalfeed.aggregated.tooltip=$\:cal.icalfeed.aggregated.title
 cal.icalfeed.info=Please use the following URL to access your calendar from other applications. You can copy and paste this to any other application supporting the iCal format.
 cal.icalfeed.regenerate.info=ICal Feed Link has been regenerated.
