--- a/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/commons/calendar/_i18n/LocalStrings_fr.properties
@@ -67,7 +67,7 @@ cal.fri=Vendredi
 cal.from=De
 cal.goto.event=Aller au rdv. s\u00E9lectionn\u00E9
 cal.icalfeed.aggregated.info=Utilisez le lien suivant pour l'acc\u00E8s de votre calendrier  (tous les calendriers agr\u00E9g\u00E9 inclus) \u00E0 partir d'autres applications. Vous pouvez copier le lien et le coller dans une application qui prend en charge le format iCal.
-cal.icalfeed.aggregated.title=Flux iCal des calendriers agr\u00E9g\u00E9s
+cal.icalfeed.aggregated.title=Flux agr\u00E9g\u00E9 et personalis\u00E9 des calendriers iCal
 cal.icalfeed.aggregated.tooltip=$\:cal.icalfeed.aggregated.title
 cal.icalfeed.info=Veuillez utiliser l'URL suivante pour appeler ce calendrier depuis une autre application. Vous pouvez copier l'URL et l'ins\u00E9rer dans toute autre application de calendrier qui supporte le format iCal.
 cal.icalfeed.regenerate.info=Le lien iCal Feed a \u00E9t\u00E9 r\u00E9actualis\u00E9.
