OO-3110: Show taxonomic path in metadata

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -58,6 +58,8 @@ general.key=DBkey
 general.keywords=Schlagworte
 general.language=Sprache
 general.master.identifier=Master ID
+general.taxonomy.level=Fachbereich
+general.taxonomy.path={0}
 general.title=Titel
 general.topic=Thema
 import.excellike.12=QTI 1.2 Excelimport \u00FCber Copy&Paste
@@ -144,7 +146,7 @@ previous=Vorherige
 process.comment=Kommentar
 process.start.review.button=$\:process.start.review
 process.start.review.description=Nach dem Start des Beurteilungsprozesses werden alle Bewertungen der Frage gel\u00F6scht und die Frage kann nicht mehr bearbeitet werden. Wollen Sie den Beurteilungsprozess f\u00FCr die Frage "{0}" wriklich starten?
-process.start.review.taxonomy.level=Fachbereiche
+process.start.review.taxonomy.level=$\:general.taxonomy.level
 process.start.review.title=$\:process.start.review
 process.confirm.endOfLife=Die Frage kann nach dem Setzen des "$\:lifecycle.status.endOfLife" nicht mehr verwendet werden .Wollen Sie die Frage "{0}" wirklich auf End of life setzen?
 process.final=Final
