--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -58,6 +58,8 @@ general.key=DBkey
 general.keywords=Keywords
 general.language=Language
 general.master.identifier=Master ID
+general.taxonomy.level=Subject
+general.taxonomy.path={0}
 general.title=Title
 general.topic=Topic
 import.excellike.12=QTI 1.2 Excel import via copy&paste
@@ -144,7 +146,7 @@ previous=Previous
 process.comment=Comment
 process.start.review.button=$\:process.start.review
 process.start.review.description=After the start of the review process all ratings are deleted and the question can not be edited anymore. Do you really want to start the review process for the question "{0}"?
-process.start.review.taxonomy.level=Subject
+process.start.review.taxonomy.level=$\:general.taxonomy.level
 process.start.review.title=$\:process.start.review
 process.confirm.endOfLife=If a question is end of life, the question can not be used anymore. Do you really want to set the end of life for the question "{0}"?
 process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
