OO-3116: Show the taxonomic path in the list of queston items

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -7,7 +7,7 @@ applications=Applications
 author.item=Author rights
 bulk.change=Change metadata
 bulk.change.description=here you can change in a single step severals attributes of several questions.
-classification.taxonomic.path=Subject
+classification.taxonomic.path=Subject path
 classification.taxonomy.level=Subject
 classification.taxonomy.parents=Path
 collection.creationDate=Created at
