--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_fr.properties
@@ -7,7 +7,7 @@ applications=Utilisations
 author.item=Droit d'auteur
 bulk.change=Changer les m\u00E9tadonn\u00E9es
 bulk.change.description=Ici vous pouvez modifier en une seule \u00E9tape les attributs de plusieurs questions \u00E0 la fois.
-classification.taxonomic.path=Sujet
+classification.taxonomic.path=Sujet chemin
 classification.taxonomy.level=Sujet
 classification.taxonomy.parents=Chemin
 collection.creationDate=Cr\u00E9er le
