--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_it.properties
@@ -5,7 +5,7 @@ applications=Utilizzazioni
 author.item=Diritti di autore
 bulk.change=Modificare i metadati
 bulk.change.description=Qui puoi modificare gli attributi di pi\u00F9 domande in un solo passo.
-classification.taxonomic.path=Disciplina
+classification.taxonomic.path=Disciplina percorso
 classification.taxonomy.level=Disciplina
 classification.taxonomy.parents=Percorso
 collection.creationDate=Creato il
