--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_pt_BR.properties
@@ -8,7 +8,7 @@ applications=Aplica\u00E7\u00F5es
 author.item=Direitos de autor
 bulk.change=Alterar metadados
 bulk.change.description=Aqui voc\u00EA pode mudar em uma \u00FAnica etapa, v\u00E1rios atributos de v\u00E1rias perguntas.
-classification.taxonomic.path=Assunto
+classification.taxonomic.path=Assunto caminho
 classification.taxonomy.level=Assunto
 classification.taxonomy.parents=Caminho
 collection.creationDate=Criado em
