no-jira: wording

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -142,7 +142,7 @@ qti.form.summary.sections=Section summary
 qti.form.summary.solutions=Solution
 qti.form.test.title=Test
 reopen=Start again
-reopen.explanation=This test was finished. You can restart the test. The test participant continues the test where it left off. The test participants continue the test where they left off. If the test is limited to 1 attempt, the number of attempts must be reset so that the test participants can continue the test.
+reopen.explanation=This test has been finished. You can restart the test. The test participant continues the test where he left it. If the test is limited to 1 attempt, the number of attempts must be reset so the test participants can continue the test.
 reopen.test=Reopen finished test
 replace.wizard.information.empty.results=<b>NOTE\: This test/questionnaire has already been launched by {0} participant(s)\!</b> All user results already existing will be deleted by clicking next on "Finish".<br></br><b>Please publish your course as soon as possible\!</b> Only after publishing will course participants be able to launch your newly assigned test/questionnaire; any results can then be saved accordingly.
 replace.wizard.information.paragraph1=<b>NOTE\: This test/questionnaire has already been launched by {0} participant(s) and finished in part\!</b> All results of tests/questionnaires already finished will be archived and deleted by clicking next on "Finish".<br></br>Archived data can be downloaded here\:
