--- a/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/assessment/ui/tool/_i18n/LocalStrings_en.properties
@@ -44,6 +44,7 @@ participantgroups.title=Participants in groups
 previous=Previous
 reopen=$org.olat.modules.assessment.ui\:reopen
 reset.attempts=Reset number of attempts
+reset.attempts.explanation=This course has been finished. You can reset the number of attempts. Then the test participant has to start the test from the beginning. Exception: If you have reopened the test with "Reopen finished test" before. Then the test participant can continue the test where you stopped it. The number of attempts is reset to 0. All data of the previous attempts will be saved, independent of the new attempt. 
 save.done=$org.olat.modules.assessment.ui\:save.done
 statistics.small.overview=$org.olat.modules.assessment.ui\:statistics.small.overview
 sub.details=Details
