--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -143,7 +143,7 @@ qti.form.summary.none=Keine Eingabe notwendig.
 qti.form.summary.section=Sektionszusammenfassung (ohne L\u00F6sungen)
 qti.form.test.title=Test
 reopen=Erneut starten
-reopen.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut starten. Der Testteilnehmende f\u00FChrt den Test dort weiter, wo er aufgeh\u00F6rt hat. Falls der Test auf 1 Versuch beschr\u00E4nkt ist, m\u00FCssen die Versuche zur\u00FCckgesetz werden, damit der Testteilnehmende den Test weiterf\u00FChren kann.
+reopen.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut starten. Der Testteilnehmende kann den Test dann dort weiterf\u00FChren, wo er aufgeh\u00F6rt hat. Falls der Test auf 1 Versuch beschr\u00E4nkt ist, m\u00FCssen außerdem die Versuche zur\u00FCckgesetzt werden, damit der Testteilnehmende den Test weiterf\u00FChren kann.
 reopen.test=Beendeten Test wieder \u00F6ffnen
 replace.wizard.information.empty.results=<b>HINWEIS\: Dieser Test/Fragebogen wurde bereits von {0} Teilnehmer(n) begonnen\!</b> Die bisherigen Ergebnisse dieser Nutzer werden mit Klick auf "Fertigstellen" im n\u00E4chsten Schritt gel\u00F6scht.<br /><br /><b>Publizieren Sie schnellstm\u00F6glich Ihren Kurs\!</b> Erst nach dem Publizieren des Kurses k\u00F6nnen die Kursteilnehmer den neu zugeordneten Test/Fragebogen starten und entsprechende Ergebnisse gespeichert werden.
 replace.wizard.information.paragraph1=<b>HINWEIS\: Dieser Test/Fragebogen wurde bereits von {0} Teilnehmer(n) gestartet und zum Teil auch beendet\!</b> Die Ergebnisse der beendeten Tests/Frageb\u00F6gen werden archiviert und mit Klick auf "Fertigstellen" im n\u00E4chsten Schritt gel\u00F6scht.<br /><br />Die archivierten Ergebnisse k\u00F6nnen Sie hier herunterladen\:<br />
