--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -8,6 +8,7 @@ author.item=Autorenrechte
 bulk.change=Metadaten \u00E4ndern
 bulk.change.description=Hier k\u00F6nnen Sie in 1 Schritt mehrere Attributen von mehreren Fragen \u00E4ndern.
 classification.taxonomic.path=Fachbereich Pfad
+classification.taxonomic.path.incl=Fachbereiche
 classification.taxonomy.level=Fachbereich
 classification.taxonomy.parents=Pfad
 collection.creationDate=Erstellt am
