--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -8,6 +8,7 @@ author.item=Author rights
 bulk.change=Change metadata
 bulk.change.description=here you can change in a single step severals attributes of several questions.
 classification.taxonomic.path=Subject path
+classification.taxonomic.path.incl=Subjects
 classification.taxonomy.level=Subject
 classification.taxonomy.parents=Path
 collection.creationDate=Created at
