OO-3122: Predifined query to find all questions without a subject

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -116,7 +116,6 @@ menu.admin.studyfields=Fachbereich
 menu.admin.studyfields.alt=Fachbereich
 menu.admin.types=Fragetyp
 menu.admin.types.alt=Fragetyp
-menu.all.questions=Alle Fragen
 menu.database=Fragendatenbank
 menu.database.alt=Ihre Fragendatenbank
 menu.database.favorit=Meine Favoriten
@@ -128,6 +127,9 @@ menu.pools=Pool
 menu.pools.alt=Pool
 menu.pools.main=Katalog
 menu.pools.main.alt=Katalog
+menu.queries=Fragen
+menu.queries.all=Alle Fragen
+menu.queries.missing.taxonomy.level=Ohne Fachbereich
 menu.review=Beurteilung
 menu.share=Freigaben
 metadatas=Metadaten
