--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -116,7 +116,6 @@ menu.admin.studyfields=Subject
 menu.admin.studyfields.alt=Subject
 menu.admin.types=Type
 menu.admin.types.alt=Type
-menu.all.questions=All questions
 menu.database=Question database
 menu.database.alt=Your question database
 menu.database.favorit=My favourites
@@ -128,6 +127,9 @@ menu.pools=Pool
 menu.pools.alt=Pool
 menu.pools.main=Catalog
 menu.pools.main.alt=Catalog
+menu.queries=Questions
+menu.queries.all=All questions
+menu.queries.missing.taxonomy.level=Without Subject
 menu.review=Review
 menu.share=Public shares
 metadatas=Metadata
