OO-3029: add the possibility to remove its access rights from a shared binder

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -189,6 +189,8 @@ invitation.mail.success=Die eingeladenen Personen wurden erfolgreich per E-Mail 
 issue=Ausgabe
 language=Language
 lastName=Name
+leave=Entfernen
+leave.explain=Wollen Sie wirklich diese Sammelmappe von ihre Liste entfernen? Der Author muss wieder ihene den Zugriff geben um diese Mappe wieder zu sehen.
 mail=Mail
 mail.body=Nachricht
 mail.subject=Betreffzeile
