--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
@@ -189,6 +189,8 @@ invitation.mail.success=The persons invited have been notified successfully via 
 issue=Issue
 language=Sprache
 lastName=Last name
+leave=Remove
+leave.explain=Do you really want to remove this binder from the list? The author of the binder will need to give you access to it again if you want to visit it again.
 mail=E-mail
 mail.body=Mail body
 mail.subject=Mail subject
