OO-3235 add force reload mechanism to static media dispatcher

--- a/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_de.properties
@@ -1,4 +1,6 @@
 form.theme=Systemlayout
+form.theme.forceReload=Neuladen aller statischen Ressourcen erzwingen
+form.theme.forceReload.help=Neuladen nur notwendig wenn Änderungen an bereits geladenem Layout vorgenommen wurden.
 layout.intro=Im folgenden k\u00F6nnen Sie die zur Verf\u00FCgung stehenden Layout-Themes ausprobieren. W\u00E4hlen Sie aus der Liste ein Thema aus um dieses zu verwenden. Um die Darstellungs\u00E4nderungen zu aktivieren m\u00FCssen Sie aus- und erneut einloggen.
 layout.title=Layout
 topnav.impressum=Impressum
