--- a/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/admin/layout/_i18n/LocalStrings_en.properties
@@ -16,6 +16,8 @@ footerLine.description=Text in the footer line (email- and webadresses get repla
 footerUrl.default=http\://www.frentix.com
 footerUrl.description=Specify target URL for the footer (optional).
 form.theme=System layout
+form.theme.forceReload=Force reload of all static resources
+form.theme.forceReload.help=Force reload is only necessary when an already loaded system layout has been modified
 invitee=invitee
 layout.intro=Here you can test existing layout themes. Select a theme from the list in order to use it. Your modifications will be activated after the next login.
 layout.title=Layout
