OO-3029: add statistics about the number of pages in status "Draft", "In revision" and "Closed" in the "Shared with me" table

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_de.properties
@@ -350,12 +350,15 @@ table.grading.passed.points=<span class\="o_state o_passed"><i class\="o_icon o_
 table.grading.points={0} Punkt(e)
 table.header.categories=Kategorien
 table.header.change.status=Status
+table.header.closed=Abgeschlossen
 table.header.collection.date=Sammeldatum
 table.header.course=Kurs
 table.header.course.node=Kursbaustein
 table.header.date=Datum
 table.header.down=<i class\='o_icon o_icon o_icon-lg o_icon_move_down'> </i>
+table.header.draft=$\:status.draft
 table.header.grading=Bewertung
+table.header.inRevision=$\:status.in.revision
 table.header.key=ID
 table.header.lastUpdate=Letzte Aktualisierung
 table.header.numpages=\# Eintr\u00E4ge
