--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
@@ -350,12 +350,15 @@ table.grading.passed.points=<span class\="o_state o_passed"><i class\="o_icon o_
 table.grading.points={0} Point(s)
 table.header.categories=Categories
 table.header.change.status=Status
+table.header.closed=Closed
 table.header.collection.date=Collected at
 table.header.course=Course
 table.header.course.node=Course element
 table.header.date=Date
 table.header.down=<i class\='o_icon o_icon o_icon-lg o_icon_move_down'> </i>
+table.header.draft=$\:status.draft
 table.header.grading=Grading
+table.header.inRevision=$\:status.in.revision
 table.header.key=ID
 table.header.lastUpdate=Last update
 table.header.numpages=\# Entries
