no-jira: translation pt_BR

--- a/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/core/commons/chiefcontrollers/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:40:58 CET 2017
+#Thu Jan 11 12:11:32 CET 2018
 AssessmentManager=Ferramenta de avalia\u00E7\u00E3o
 Binder=Portf\u00F3lio 2.0
 BinderTemplate=Modelo Portf\u00F3lio 2.0
@@ -47,6 +47,7 @@ PFCourseNode=Drop Box
 ReturnboxController=Retorno da corre\u00E7\u00E3o
 SolutionController=Exemplos de solu\u00E7\u00F5es
 TaxonomyLibrary=Biblioteca de taxonomia
+Templates=Templates
 User=Usu\u00E1rio
 WikiPage=Wiki
 ajax.show.on=[Ajax-Beta-Mode]
