--- a/src/main/java/org/olat/search/ui/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/search/ui/_i18n/LocalStrings_pt_BR.properties
@@ -1,4 +1,4 @@
-#Thu Nov 23 17:52:58 CET 2017
+#Thu Jan 11 12:11:49 CET 2018
 DocumentPool=Reservat\u00F3rio de documentos
 EPSite=Portf\u00F3lio
 HomeSite=Home
@@ -6,6 +6,7 @@ LibrarySite=Biblioteca
 Portfolio=Portfolio
 Taxonomy=Taxonomia
 TaxonomyLevel=N\u00EDvel de taxonomia
+Templates=Templates
 all.search.result.title=Todos {0} resultados 
 area.blogs=Blog/Podcast
 area.courses=Cursos
