OO-3112: Option to delete questions of a user when the user is deleted. Delete also marks, security group, files when a question is deleted. Predefined query to find all questions without author

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -129,7 +129,8 @@ menu.pools.main=Katalog
 menu.pools.main.alt=Katalog
 menu.queries=Fragen
 menu.queries.all=Alle Fragen
-menu.queries.missing.taxonomy.level=Ohne Fachbereich
+menu.queries.without.taxonomy.level=Ohne Fachbereich
+menu.queries.without.author=Ohne Autor
 menu.review=Beurteilung
 menu.share=Freigaben
 metadatas=Metadaten
