--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -18,6 +18,8 @@ delete.level=Delete
 delete.level.confirm=Do you really want to delete this level?
 delete.taxonomyLevel=Delete
 delete.taxonomyLevel.confirm=Do you really want to delete this subject "{0}"?
+delete.qustions.without.author=Delete questions when author deleted
+delete.qustions.without.author.info=When a user is deleted, he is removed as author from his question items. If this option is enabled and the user is the only author of the question item, the question item is deleted as well.
 delete.license=Delete
 delete.license.confirm=Do you really want to delete this license?
 delete.type=Delete
