--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -129,7 +129,8 @@ menu.pools.main=Catalog
 menu.pools.main.alt=Catalog
 menu.queries=Questions
 menu.queries.all=All questions
-menu.queries.missing.taxonomy.level=Without Subject
+menu.queries.whithout.taxonomy.level=Without subject
+menu.queries.whithout.author=Without author
 menu.review=Review
 menu.share=Public shares
 metadatas=Metadata
