--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -19,6 +19,8 @@ delete.level=L\u00F6schen
 delete.level.confirm=Wollen Sie wirklich diese Stufe l\u00F6schen?
 delete.license=L\u00F6schen
 delete.license.confirm=Wollen Sie wirklich diese Lizenz l\u00F6schen?
+delete.qustions.without.author=Fragen l\u00F6schen, wenn Autor gel\u00F6scht
+delete.qustions.without.author.info=Beim L\u00F6schen eines Benutzers wird er als Autoren von allen Fragen ausgetragen. Wenn diese Option eingeschaltet ist und der Benutzer der einzige Autor einer Frage ist, wird die Frage ebenfalls gel\u00F6scht.
 delete.taxonomyLevel=L\u00F6schen
 delete.taxonomyLevel.confirm=Wollen Sie wirklich diese Fachbereich "{0}" l\u00F6schen?
 delete.type=L\u00F6schen
