--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -136,7 +136,7 @@ menu.share=Freigaben
 metadatas=Metadaten
 metadata.show=Metadaten anzeigen
 metadata.hide=Metadaten ausblenden
-my.competences=Meine F\u00E4cher
+my.competences=Meine Fachbereiche
 my.list=Meine Listen
 my.share=Meine Shares
 new.item=Frage erstellen
