OO-3117: Toggle icon to show/hide matadata

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -134,8 +134,8 @@ menu.queries.without.author=Ohne Autor
 menu.review=Beurteilung
 menu.share=Freigaben
 metadatas=Metadaten
-metadata.show=Metadaten anzeigen
-metadata.hide=Metadaten ausblenden
+metadata.show=Metadaten
+metadata.hide=Metadaten
 my.competences=Meine Fachbereiche
 my.list=Meine Listen
 my.share=Meine Shares
