--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -134,8 +134,8 @@ menu.queries.whithout.author=Without author
 menu.review=Review
 menu.share=Public shares
 metadatas=Metadata
-metadata.show=Show metadata
-metadata.hide=Hide metadata
+metadata.show=Metadata
+metadata.hide=Metadata
 my.competences=My subjects
 my.list=My lists
 my.share=My shares
