OO-3117: Hightlight the buttons for the start of the review process and the rating

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -147,18 +147,17 @@ pool.owners=Besitzer
 pool.public=\u00D6ffentlich
 presentation.title=Fragenpool
 previous=Vorherige
+process.activate.not.reviewable.description=Fragen im Format 'QTI 1.2' k\u00F6nnen nicht beurteilt werden. Bitte konvertieren Sie die Frage zuerst in das Format 'QTI 2.1'.
+process.activate.review=Frage beurteilen
+process.activate.review.description=Die Frage befindet sich im Status 'Review'. Bitte \u00FCberpr\u00FCfen Sie die Frage sorgf\u00E4ltig auf fachlich und eignungstechnische Korrektheit und geben Sie anschliessend mit der untenstehenden Schaltfl\u00E4che Ihre Bewertung ab.
+process.activate.start.review=Beurteilungsprozes starten
+process.activate.start.review.description=Diese Frage befindet sich im Status 'Draft'. Wenn die Frage fertig erstellt ist, k\u00F6nnen Sie den Beurteilungsprozess starten. Die Frage kann anschliessend nicht mehr bearbeitet werden.
 process.comment=Kommentar
-process.start.review.button=$\:process.start.review
-process.start.review.description=Nach dem Start des Beurteilungsprozesses werden alle Bewertungen der Frage gel\u00F6scht und die Frage kann nicht mehr bearbeitet werden. Wollen Sie den Beurteilungsprozess f\u00FCr die Frage "{0}" wriklich starten?
-process.start.review.taxonomy.level=$\:general.taxonomy.level
-process.start.review.title=$\:process.start.review
 process.confirm.endOfLife=Die Frage kann nach dem Setzen des "$\:lifecycle.status.endOfLife" nicht mehr verwendet werden .Wollen Sie die Frage "{0}" wirklich auf End of life setzen?
 process.final=Final
 process.final.set=Der Status der Frage wurde auf "$\:lifecycle.status.finalVersion" ge\u00E4ndert.
 process.endOfLife=End of life
 process.endOfLife.set=Das end of life wurde gesetzt.
-process.not.reviewable=Keine Beurteilung
-process.not.reviewable.message=Fragen im Format 'QTI 1.2' k\u00F6nnen nicht beurteilt werden. Bitte konvertieren Sie die Frage zuerst in das Format 'QTI 2.1'.
 process.review=Beurteilung
 process.review.started=Der Beurteilungsprozess wurde gestartet.
 process.revision=Revision
@@ -166,8 +165,11 @@ process.revision.set=Der Status der Frage wurde auf "$\:lifecycle.status.revised
 process.rating.button=Beurteilen
 process.rating.description=Bewerten Sie bitte die Frage. Jede Frage kann genau einmal bewertet werden. Nach der Bewertung wir diese Frage nicht mehr in der Liste der zu beuteilenden Fagen angezeigt.
 process.rating.title=Beurteilung
-process.rating=Beurteilung
-process.start.review=Beurteilung starten
+process.rating=Bewertung
+process.start.review.button=$\:process.activate.start.review
+process.start.review.description=Nach dem Start des Beurteilungsprozesses werden alle Bewertungen der Frage gel\u00F6scht und die Frage kann nicht mehr bearbeitet werden. Wollen Sie den Beurteilungsprozess f\u00FCr die Frage "{0}" wriklich starten?
+process.start.review.taxonomy.level=$\:general.taxonomy.level
+process.start.review.title=$\:process.activate.start.review
 process.states=Status
 question=Itemanalyse
 question.assessmentType=Testart
