--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -146,18 +146,16 @@ pool.name=Name
 pool.owners=Owners
 pool.public=Public
 presentation.title=Question bank
-previous=Previous
+process.activate.not.reviewable.description=It is not possible to review questions in the format 'QTI 1.2'. Please previously convert the question to the format 'QTI 2.1'.
+process.activate.review=Review question
+process.activate.review.description=The question is in the status 'Review'. Please review the question carefully to technical correctness and with regards to content. Subsequently you have to push the button below to rate the question. 
+process.activate.start.review=Start review process
+process.activate.start.review.description=The question is in the status 'Draft'. If the question is completely created, you have to start the review process by pushing the button below. Afterwards the question can not be edited anymore.
 process.comment=Comment
-process.start.review.button=$\:process.start.review
-process.start.review.description=After the start of the review process all ratings are deleted and the question can not be edited anymore. Do you really want to start the review process for the question "{0}"?
-process.start.review.taxonomy.level=$\:general.taxonomy.level
-process.start.review.title=$\:process.start.review
 process.confirm.endOfLife=If a question is end of life, the question can not be used anymore. Do you really want to set the end of life for the question "{0}"?
 process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
 process.final.set=The status of the question has been changed to "$\:lifecycle.status.finalVersion".
 process.endOfLife.set=The end of life has been set.
-process.not.reviewable=No review
-process.not.reviewable.message=It is not possible to review questions in the format 'QTI 1.2'. Please previously convert the question to the format 'QTI 2.1'.
 process.revised.set=The status of the question has been changed to "$\:lifecycle.status.revised".
 process.review=Review
 process.review.set=The status of the question has been changed to "$\:lifecycle.status.review".
@@ -167,7 +165,10 @@ process.rating.button=Rate
 process.rating.description=Please rate the question. You are only once able to rate a question. After the rating the question is not in the list of the review questions anymore.
 process.rating.title=Review
 process.rating=Rating
-process.start.review=Start review
+process.start.review.button=$\:process.activate.start.review
+process.start.review.description=After the start of the review process all ratings are deleted and the question can not be edited anymore. Do you really want to start the review process for the question "{0}"?
+process.start.review.taxonomy.level=$\:general.taxonomy.level
+process.start.review.title=$\:process.activate.start.review
 process.states=Status
 question=Item analysis
 question.assessmentType=Test type
